CI against Rails 5.1.x and Edge Rails

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,24 @@ gemfile:
   - gemfiles/Gemfile-rails4.1.x
   - gemfiles/Gemfile-rails4.2.x
   - gemfiles/Gemfile-rails5.0.x
+  - gemfiles/Gemfile-rails5.1.x
+  - gemfiles/Gemfile-rails_edge
 
 matrix:
   allow_failures:
+    - rvm: 2.2.6
+      gemfile: gemfiles/Gemfile-rails_edge
+    - rvm: 2.3.3
+      gemfile: gemfiles/Gemfile-rails_edge
+    - rvm: 2.4.0
+      gemfile: gemfiles/Gemfile-rails_edge
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile-rails4.1.x
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile-rails4.2.x
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile-rails5.0.x
+    - rvm: ruby-head
+      gemfile: gemfiles/Gemfile-rails5.1.x
+    - rvm: ruby-head
+      gemfile: gemfiles/Gemfile-rails_edge
