--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 2.2.9
   - 2.3.6
   - 2.4.3
+  - 2.5.0
   - ruby-head
 
 gemfile:
@@ -21,6 +22,8 @@ matrix:
     - rvm: 2.3.6
       gemfile: gemfiles/Gemfile-rails_edge
     - rvm: 2.4.3
+      gemfile: gemfiles/Gemfile-rails_edge
+    - rvm: 2.5.0
       gemfile: gemfiles/Gemfile-rails_edge
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile-rails4.1.x
