Rails 6.0 requires Ruby 2.4.1 or higher
```console
43.16s$ bundle install --jobs=3 --retry=3
Your Gemfile lists the gem sqlite3 (>= 0) more than once.
You should probably keep only one of them.
While it's not a problem now, it could cause errors if you change the
version of one of them later.
Fetching https://github.com/rails/arel.git
Fetching https://github.com/rails/rails.git
Fetching gem metadata from https://rubygems.org/...........
Fetching gem metadata from https://rubygems.org/.
Resolving dependencies......
activesupport-6.0.0.alpha requires ruby version >= 2.4.1, which is
incompatible
with the current version, ruby 2.2.10p489
```

https://travis-ci.org/koic/gtm_rails/jobs/366371380#L739-L749

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,6 @@ gemfile:
 
 matrix:
   allow_failures:
-    - rvm: 2.2.10
-      gemfile: gemfiles/Gemfile-rails_edge
-    - rvm: 2.3.7
-      gemfile: gemfiles/Gemfile-rails_edge
     - rvm: 2.4.4
       gemfile: gemfiles/Gemfile-rails_edge
     - rvm: 2.5.1
@@ -41,4 +37,9 @@ matrix:
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile-rails5.2.x
     - rvm: ruby-head
+      gemfile: gemfiles/Gemfile-rails_edge
+  exclude:
+    - rvm: 2.2.10
+      gemfile: gemfiles/Gemfile-rails_edge
+    - rvm: 2.3.7
       gemfile: gemfiles/Gemfile-rails_edge
