--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ rvm:
   - ruby-head
 
 before_install:
-  - gem update --system
-  - gem update bundler
+  - travis_retry gem update --system || travis_retry gem update --system 2.7.8
+  - travis_retry gem install bundler --no-document || travis_retry gem install bundler --no-document -v 1.17.3
 
 gemfile:
   - gemfiles/Gemfile-rails4.1.x
